--- a/envs/conda_build_config-open-ce-v1.2.0.yaml
+++ b/envs/conda_build_config-open-ce-v1.2.0.yaml
@@ -1,3 +1,5 @@
+abseil_cpp:
+  - 20200225
 absl_py:
   - 0.10.*
 arrow:
@@ -24,7 +26,7 @@ catalogue:
 cffi:
   - 1.14.*
 click:
-  - 7.0.*
+  - 7.*
 cloudpickle:
   - 1.3.*
 cmake:
@@ -80,7 +82,7 @@ graphsurgeon:
   - 0.4.1                     # [cudatoolkit == '10.2']
   - 0.4.5                     # [cudatoolkit == '11.0']
 grpc_cpp:
-  - 1.26.*
+  - 1.29.*
 grpcio:
   - 1.31.*
 harfbuzz:
@@ -161,7 +163,7 @@ openmpi:
 opt_einsum:
   - 3.1.0
 pillow:
-  - 8.1.*
+  - 8.*
 pip:
   - 19*
 pkg_config:
@@ -245,3 +247,5 @@ wrapt:
   - 1.12.*
 zlib:
   - 1.2.11
+zstd:
+  - 1.4.*
