--- a/envs/conda_build_config-open-ce-v1.2.0.yaml
+++ b/envs/conda_build_config-open-ce-v1.2.0.yaml
@@ -158,6 +158,8 @@ opencv:
 openjdk:
   - 8.0.152                    # [x86_64]
   - 1.8.0                      # [ppc64le]
+mpi:
+  - openmpi
 openmpi:
   - 3.1.3
 opt_einsum:
